ENH: Adding new VR GrabTransform style
This style improves the Grab World style and ultimately intends to replace
it. In the GrabWorld style we had to configure two buttons: one for translation
and the other for rotation. This style makes sure that both are done using
only one button.

Change-Id: I2beacd78825a9b5f2f6b6ca825293161141612ce
Signed-off-by: Nikhil Shetty <nikhil.j.shetty@gmail.com>

--- a/Plugins/VR/CMakeLists.txt
+++ b/Plugins/VR/CMakeLists.txt
@@ -68,6 +68,7 @@ QT4_WRAP_CPP(MOC_SRCS
   vtkVRInteractorStyleFactory.h
   vtkVRTrackStyle.h
   vtkVRGrabWorldStyle.h
+  vtkVRGrabTransformStyle.h
   vtkVRControlSliceOrientationStyle.h
   vtkVRControlSlicePositionStyle.h
   )
@@ -93,6 +94,7 @@ SET( VR_SOURCE_FILES
   vtkVRSkeletonStyle.cxx
   vtkVRTrackStyle.cxx
   vtkVRGrabWorldStyle.cxx
+  vtkVRGrabTransformStyle.cxx
   vtkVRControlSliceOrientationStyle.cxx
   vtkVRControlSlicePositionStyle.cxx
   vtkVRSpaceNavigatorGrabWorldStyle.cxx
